--- a/assets/styles/mini.scss
+++ b/assets/styles/mini.scss
@@ -35,29 +35,26 @@
     @include make-card-alt-size($card-fluid-name, $card-fluid-width);
 
     $card-warning-name: 'warning'; // Class name for card warnging color variant.
-
     @include make-card-alt-color(
-        $card-warning-name,
-        $card-warning-back-color,
-        $card-warning-fore-color,
-        $card-warning-border-color
+            $card-warning-name,
+            $card-warning-back-color,
+            $card-warning-fore-color,
+            $card-warning-border-color
     );
 
     $card-error-name: 'error'; // Class name for card error color variant.
-
     @include make-card-alt-color(
-        $card-error-name,
-        $card-error-back-color,
-        $card-error-fore-color,
-        $card-error-border-color
+            $card-error-name,
+            $card-error-back-color,
+            $card-error-fore-color,
+            $card-error-border-color
     );
 
     $card-section-dark-name: 'dark'; // Class name for card dark section variant.
-
     @include make-card-section-alt-color(
-        $card-section-dark-name,
-        $card-section-dark-back-color,
-        $card-section-dark-fore-color
+            $card-section-dark-name,
+            $card-section-dark-back-color,
+            $card-section-dark-fore-color
     );
 
     $card-section-double-padded-name: 'double-padded'; // Class name for card double-padded section variant.
@@ -69,74 +66,71 @@
     @import 'mini.css/src/mini/input_control';
     @import 'components/switch';
 
+
     /* Custom elements for forms and input elements. */
     $button-primary-name: 'primary'; // Class name for primary button color variant.
-
     @include make-button-alt-color(
-        $button-primary-name,
-        $button-primary-back-color,
-        $button-primary-hover-back-color,
-        $button-primary-fore-color
+            $button-primary-name,
+            $button-primary-back-color,
+            $button-primary-hover-back-color,
+            $button-primary-fore-color
     );
     .dark {
         @include make-button-alt-color(
-            $button-primary-name,
-            $button-primary-back-dark-color,
-            $button-primary-hover-back-color,
-            $button-primary-fore-dark-color
+                $button-primary-name,
+                $button-primary-back-dark-color,
+                $button-primary-hover-back-color,
+                $button-primary-fore-dark-color
         );
     }
 
     $button-secondary-name: 'secondary'; // Class name for secondary button color variant.
-
     @include make-button-alt-color(
-        $button-secondary-name,
-        $button-secondary-back-color,
-        $button-secondary-hover-back-color,
-        $button-secondary-fore-color
+            $button-secondary-name,
+            $button-secondary-back-color,
+            $button-secondary-hover-back-color,
+            $button-secondary-fore-color
     );
     .dark {
         @include make-button-alt-color(
-            $button-secondary-name,
-            $button-secondary-back-dark-color,
-            $button-secondary-hover-back-color,
-            $button-secondary-fore-dark-color
+                $button-secondary-name,
+                $button-secondary-back-dark-color,
+                $button-secondary-hover-back-color,
+                $button-secondary-fore-dark-color
         );
     }
 
     $button-tertiary-name: 'tertiary'; // Class name for tertiary button color variant.
-
     @include make-button-alt-color(
-        $button-tertiary-name,
-        $button-tertiary-back-color,
-        $button-tertiary-hover-back-color,
-        $button-tertiary-fore-color
+            $button-tertiary-name,
+            $button-tertiary-back-color,
+            $button-tertiary-hover-back-color,
+            $button-tertiary-fore-color
     );
 
     .dark {
         @include make-button-alt-color(
-            $button-tertiary-name,
-            $button-tertiary-back-dark-color,
-            $button-tertiary-hover-back-color,
-            $button-tertiary-fore-dark-color
+                $button-tertiary-name,
+                $button-tertiary-back-dark-color,
+                $button-tertiary-hover-back-color,
+                $button-tertiary-fore-dark-color
         );
     }
 
     $button-inverse-name: 'inverse'; // Class name for inverse button color variant.
-
     @include make-button-alt-color(
-        $button-inverse-name,
-        $button-inverse-back-color,
-        $button-inverse-hover-back-color,
-        $button-inverse-fore-color
+            $button-inverse-name,
+            $button-inverse-back-color,
+            $button-inverse-hover-back-color,
+            $button-inverse-fore-color
     );
 
     .dark {
         @include make-button-alt-color(
-            $button-inverse-name,
-            $button-inverse-back-dark-color,
-            $button-inverse-hover-back-color,
-            $button-inverse-fore-dark-color
+                $button-inverse-name,
+                $button-inverse-back-dark-color,
+                $button-inverse-hover-back-color,
+                $button-inverse-fore-dark-color
         );
     }
 
@@ -157,14 +151,12 @@
 
     /* Custom elements for contextual background elements, toasts and tooltips. */
     $mark-secondary-name: 'secondary'; // Class name for secondary <mark> color variant.
-
     @include make-mark-alt-color($mark-secondary-name, $mark-secondary-back-color);
     .dark {
         @include make-mark-alt-color($mark-secondary-name, $mark-secondary-back-dark-color);
     }
 
     $mark-tertiary-name: 'tertiary'; // Class name for tertiary <mark> color variant.
-
     @include make-mark-alt-color($mark-tertiary-name, $mark-tertiary-back-color);
     .dark {
         @include make-mark-alt-color($mark-tertiary-name, $mark-tertiary-back-dark-color);
@@ -184,26 +176,31 @@
     .dark {
         @include make-progress-alt-color($progress-primary-name, $progress-primary-fore-dark-color);
     }
+
     $progress-secondary-name: 'secondary'; // Class name for secondary <progress> color variant.
     @include make-progress-alt-color($progress-secondary-name, $progress-secondary-fore-color);
     .dark {
         @include make-progress-alt-color($progress-secondary-name, $progress-secondary-fore-dark-color);
     }
+
     $progress-tertiary-name: 'tertiary'; // Class name for tertiary <progress> color variant.
     @include make-progress-alt-color($progress-tertiary-name, $progress-tertiary-fore-color);
     .dark {
         @include make-progress-alt-color($progress-tertiary-name, $progress-tertiary-fore-dark-color);
     }
+
     $spinner-donut-primary-name: 'primary'; // Class name for primary spinner donutcolor variant.
     @include make-spinner-donut-alt-color($spinner-donut-primary-name, $spinner-donut-primary-fore-color);
     .dark {
         @include make-spinner-donut-alt-color($spinner-donut-primary-name, $spinner-donut-primary-fore-dark-color);
     }
+
     $spinner-donut-secondary-name: 'secondary'; // Class name for secondary spinner donut color variant.
     @include make-spinner-donut-alt-color($spinner-donut-secondary-name, $spinner-donut-secondary-fore-color);
     .dark {
         @include make-spinner-donut-alt-color($spinner-donut-secondary-name, $spinner-donut-secondary-fore-dark-color);
     }
+
     $spinner-donut-tertiary-name: 'tertiary'; // Class name for tertiary spinner donut color variant.
     @include make-spinner-donut-alt-color($spinner-donut-tertiary-name, $spinner-donut-tertiary-fore-color);
     .dark {
@@ -284,6 +281,8 @@
             }
         }
     }
+
+
 }
 @layer utilities {
     @import 'mini.css/src/mini/utility';
@@ -291,3 +290,5 @@
         #{$border-generic-color-var}: $border-generic-dark-color;
     }
 }
+@import 'components/tomselect';
+
