:sparkles: add download button

--- a/assets/styles/components/_tomselect.scss
+++ b/assets/styles/components/_tomselect.scss
@@ -14,7 +14,7 @@
         box-shadow: none;
     }
 
-    [type="text"]::placeholder {
+    [type="text"], [type="text"]::placeholder {
         color: var(--input-fore-color);
     }
 }
